    option such as eagerload_all('x.y.z.y.x') will apply eagerloading to
    only those paths, i.e. and not 'x.y.x'; eagerload('children.children')
    applies only to exactly two-levels deep, etc. [ticket:777]

  - query doesn't throw an error if you use distinct() and an order_by()
    containing UnaryExpressions (or other) together [ticket:848]
    
  - The session API has been solidified:

    - It's an error to session.save() an object which is already
      persistent [ticket:840]

    - It's an error to session.delete() an object which is *not*
      persistent.

    - session.update() and session.delete() raise an error when updating
      or deleting an instance that is already in the session with a
      different identity.

    - The session checks more carefully when determining "object X already
      in another session"; e.g. if you pickle a series of objects and
      unpickle (i.e. as in a Pylons HTTP session or similar), they can go
      into a new session without any conflict

    - merge() includes a keyword argument "dont_load=True".  setting this
      flag will cause the merge operation to not load any data from the
      database in response to incoming detached objects, and will accept
      the incoming detached object as though it were already present in
      that session.  Use this to merge detached objects from external
      caching systems into the session.

  - Deferred column attributes no longer trigger a load operation when the
    attribute is assigned to.  In those cases, the newly assigned value
    will be present in the flushes' UPDATE statement unconditionally.
    
  - Fixed a truncation error when re-assigning a subset of a collection
    (obj.relation = obj.relation[1:]) [ticket:834]

  - De-cruftified backref configuration code, backrefs which step on
    existing properties now raise an error [ticket:832]

  - Improved behavior of add_property() etc., fixed [ticket:831] involving
    synonym/deferred.
